--- a/package.json
+++ b/package.json
@@ -17,10 +17,16 @@
     "@angular/compiler": "~11.2.4",
     "@angular/core": "~11.2.4",
     "@angular/forms": "~11.2.4",
+    "@angular/localize": "~11.2.4",
     "@angular/platform-browser": "~11.2.4",
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.1",
+    "angular-calendar": "^0.28.24",
+    "angularx-flatpickr": "^6.5.2",
     "bootstrap": "^4.6.0",
+    "date-fns": "^2.21.3",
+    "flatpickr": "^4.6.9",
     "rxjs": "~6.6.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
